work to fix all-day event positioning (and wrapping) in week ciew

--- a/src/scss/partials/_events.scss
+++ b/src/scss/partials/_events.scss
@@ -38,7 +38,7 @@
     display: block;
     left: 0;
     margin: 0 0 1px;
-    padding: 0 5px;
+    padding: 2px 5px;
     position: absolute;
     text-decoration: none;
     top: 0;
@@ -62,6 +62,7 @@
     &[data-span="4"] {width: calc(100% / 7 * 4);}
     &[data-span="5"] {width: calc(100% / 7 * 5);}
     &[data-span="6"] {width: calc(100% / 7 * 6);}
+    &[data-span="7"] {width: calc(100% / 7 * 7);}
 
     &.event--single-line {
         overflow: hidden;
